--- a/TradingClass.ipynb
+++ b/TradingClass.ipynb
@@ -20,6 +20,7 @@
    },
    "outputs": [],
    "source": [
+    "#test\n",
     "#(studiolab) studio-lab-user@default:~/sagemaker-studiolab-notebooks/AI-OT24$ tensorboard --logdir logs/\n",
     "!pip install -q ib_insync numpy pandas yfinance matplotlib ta seaborn gymnasium stable-baselines3 sb3-contrib tensorflow scikit-learn quantstats imitation fredapi typing\n"
    ]
