--- a/notebooks/TradingClass.ipynb
+++ b/notebooks/TradingClass.ipynb
@@ -52,7 +52,7 @@
     "import datetime\n",
     "import warnings\n",
     "#warnings.filterwarnings(\"ignore\")\n",
-    "#os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'  # 0 = all messages, 1 = info, 2 = warnings, 3 = errors\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'  # 0 = all messages, 1 = info, 2 = warnings, 3 = errors\n",
     "\n",
     "# Data Manipulation\n",
     "import numpy as np\n",
@@ -125,7 +125,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!pip install -q -r requirements.txt"
    ]
