Second Testing grouped by sectors

--- a/notebooks/Pipeline.ipynb
+++ b/notebooks/Pipeline.ipynb
@@ -99,10 +99,8 @@
     "stocks = ['AAPL', 'AMZN', 'META', 'MSFT', 'NVDA', 'TSLA']\n",
     "start_date = '2015-01-01'\n",
     "end_date = '2023-06-30'\n",
-    "stock_list = ['AAPL', 'ABBV', 'ADBE', 'AES', 'AMAT', 'AMCR', 'AMD', 'AMZN', 'ANET', 'APA', 'APH', 'AVGO', 'BA', 'BAC', 'BMY', 'C', 'CCI', 'CCL', 'CMCSA', 'CMG', 'CNC', 'CNP', 'COP', 'CRM', 'CSCO', 'CSX', 'CTRA', 'CVS', 'CVX', 'DAL', 'DIS', 'DVN', 'EQT', 'EW', 'EXC', 'F', 'FCX', 'GE', 'GILD', 'GIS', 'GM', 'GOOG', 'GOOGL', 'HAL', 'HBAN', 'HPQ', 'HST', 'INTC', 'IPG', 'JNJ', 'JPM', 'KDP', 'KEY', 'KMI', 'KO', 'LRCX', 'LUV', 'MCHP', 'MDLZ', 'MDT', 'META', 'MO', 'MRK', 'MS', 'MSFT', 'MU', 'NCLH', 'NEE', 'NEM', 'NKE', 'NVDA', 'ON', 'ORCL', 'OXY', 'PARA', 'PCG', 'PEP', 'PFE', 'PG', 'QCOM', 'RF', 'SBUX', 'SCHW', 'SLB', 'SMCI', 'T', 'TFC', 'TJX', 'TSLA', 'UNH', 'USB', 'V', 'VTRS', 'VZ', 'WBA', 'WBD', 'WDC', 'WFC', 'WMB', 'WMT', 'XOM']\n",
-    "stock_list = sorted(stock_list)\n",
     "n_envs = 8\n",
-    "n_steps = 16\n",
+    "n_steps = 32\n",
     "total_timesteps = 10_000\n",
     "batch_size = 32\n",
     "learning_rate = 0.0001\n",
@@ -124,16 +122,121 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  101 of 101 completed\n"
+      "[*********************100%***********************]  100 of 100 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group 1: ['NVDA', 'TSLA', 'PFE', 'XOM', 'BAC', 'VZ']\n",
+      "Group 2: ['SMCI', 'F', 'WBA', 'DVN', 'C', 'GOOGL']\n",
+      "Group 3: ['INTC', 'AMZN', 'CVS', 'OXY', 'HBAN', 'T']\n",
+      "Group 4: ['AMD', 'CCL', 'PCG', 'KMI', 'WFC', 'WBD']\n",
+      "Group 5: ['AVGO', 'WMT', 'VTRS', 'SLB', 'KEY', 'CMCSA']\n",
+      "Group 6: ['AAPL', 'MDLZ', 'AES', 'HAL', 'JPM', 'GOOG']\n",
+      "Group 7: ['MU', 'MO', 'BMY', 'FCX', 'MS', 'CSX']\n",
+      "Group 8: ['CSCO', 'SBUX', 'MRK', 'CVX', 'V', 'META']\n",
+      "Group 9: ['MSFT', 'KO', 'JNJ', 'NEM', 'RF', 'BA']\n",
+      "Group 10: ['LRCX', 'NKE', 'NEE', 'CTRA', 'USB', 'PARA']\n",
+      "Group 11: ['MCHP', 'GM', 'ABBV', 'COP', 'SCHW', 'DAL']\n",
+      "Group 12: ['ON', 'AMCR', 'MDT', 'APA', 'TFC', 'LUV']\n",
+      "Group 13: ['QCOM', 'NCLH', 'GILD', 'WMB', 'HST', 'GE']\n",
+      "Group 14: ['AMAT', 'PEP', 'EXC', 'EQT', 'CCI', 'DIS']\n",
+      "\n",
+      "Remaining Tickers by Sector:\n",
+      "Tech: []\n",
+      "Consumer Goods (Cyclical & Defensive): []\n",
+      "Healthcare & Utilities: []\n",
+      "Energy & Basic Materials: []\n",
+      "Financial Services & Real Estate: []\n",
+      "Industrials: []\n"
      ]
     }
    ],
    "source": [
+    "# Example stock list\n",
+    "stock_list = ['AAPL', 'ABBV', 'ADBE', 'AES', 'AMAT', 'AMCR', 'AMD', 'AMZN', 'ANET', 'APA', 'APH', 'AVGO', 'BA', 'BAC', 'BMY', 'C', 'CCI', 'CCL', 'CMCSA', 'CMG', 'CNP', 'COP', 'CRM', 'CSCO', 'CSX', 'CTRA', 'CVS', 'CVX', 'DAL', 'DIS', 'DVN', 'EQT', 'EW', 'EXC', 'F', 'FCX', 'GE', 'GILD', 'GIS', 'GM', 'GOOG', 'GOOGL', 'HAL', 'HBAN', 'HPQ', 'HST', 'INTC', 'IPG', 'JNJ', 'JPM', 'KDP', 'KEY', 'KMI', 'KO', 'LRCX', 'LUV', 'MCHP', 'MDLZ', 'MDT', 'META', 'MO', 'MRK', 'MS', 'MSFT', 'MU', 'NCLH', 'NEE', 'NEM', 'NKE', 'NVDA', 'ON', 'ORCL', 'OXY', 'PARA', 'PCG', 'PEP', 'PFE', 'PG', 'QCOM', 'RF', 'SBUX', 'SCHW', 'SLB', 'SMCI', 'T', 'TFC', 'TJX', 'TSLA', 'UNH', 'USB', 'V', 'VTRS', 'VZ', 'WBA', 'WBD', 'WDC', 'WFC', 'WMB', 'WMT', 'XOM']\n",
+    "\n",
     "data = yf.download(stock_list,start_date,end_date,interval='1d')\n",
     "index_false = np.isnan(data.iloc[0]['Close'].values) == False\n",
     "stock_list = np.array(stock_list)  # Ensure it's an array if indexing is required.\n",
     "stock_list = list(stock_list[index_false])  # Outputs: array(['AAPL', 'MSFT'])\n",
-    "stock_list = stock_list[0:24]"
+    "\n",
+    "# Initialize combined sectors\n",
+    "combined_sectors = {\n",
+    "    \"Tech\": [],\n",
+    "    \"Consumer Goods (Cyclical & Defensive)\": [],\n",
+    "    \"Healthcare & Utilities\": [],\n",
+    "    \"Energy & Basic Materials\": [],\n",
+    "    \"Financial Services & Real Estate\": [],\n",
+    "    \"Industrials\": [],\n",
+    "}\n",
+    "\n",
+    "# Mapping sectors to combined groups\n",
+    "sector_to_group = {\n",
+    "    \"Technology\": \"Tech\",\n",
+    "    \"Communication Services\": \"Industrials\",\n",
+    "    \"Consumer Cyclical\": \"Consumer Goods (Cyclical & Defensive)\",\n",
+    "    \"Consumer Defensive\": \"Consumer Goods (Cyclical & Defensive)\",\n",
+    "    \"Healthcare\": \"Healthcare & Utilities\",\n",
+    "    \"Utilities\": \"Healthcare & Utilities\",\n",
+    "    \"Energy\": \"Energy & Basic Materials\",\n",
+    "    \"Basic Materials\": \"Energy & Basic Materials\",\n",
+    "    \"Financial Services\": \"Financial Services & Real Estate\",\n",
+    "    \"Real Estate\": \"Financial Services & Real Estate\",\n",
+    "    \"Industrials\": \"Industrials\",\n",
+    "}\n",
+    "\n",
+    "# Fetch sector, volume, and assign tickers to groups\n",
+    "volume_data = []\n",
+    "\n",
+    "for ticker in stock_list:\n",
+    "    stock = yf.Ticker(ticker)\n",
+    "    info = stock.info\n",
+    "    sector = info.get('sector')\n",
+    "    if sector in sector_to_group:\n",
+    "        group = sector_to_group[sector]\n",
+    "        volume = info.get('volume', 0)  # Fetch trading volume\n",
+    "        volume_data.append((ticker, group, volume))\n",
+    "\n",
+    "# Sort and filter top 14 stocks by volume for each sector group\n",
+    "for group in combined_sectors.keys():\n",
+    "    top_stocks = sorted(\n",
+    "        [t for t in volume_data if t[1] == group], key=lambda x: x[2], reverse=True\n",
+    "    )[:14]\n",
+    "    combined_sectors[group] = [t[0] for t in top_stocks]\n",
+    "\n",
+    "# Function to create groups, picking the highest-volume stock remaining\n",
+    "def create_stock_groups(sector_data, group_size=6):\n",
+    "    groups = []\n",
+    "    while True:\n",
+    "        current_group = []\n",
+    "        for sector, tickers in list(sector_data.items()):\n",
+    "            if tickers:  # Ensure tickers are available\n",
+    "                selected_stock = tickers.pop(0)  # Select the highest-volume stock\n",
+    "                current_group.append(selected_stock)\n",
+    "            if len(current_group) == group_size:\n",
+    "                break\n",
+    "        \n",
+    "        if len(current_group) == group_size:\n",
+    "            groups.append(current_group)\n",
+    "        else:\n",
+    "            break  # Stop if a complete group can't be formed\n",
+    "\n",
+    "    return groups\n",
+    "\n",
+    "# Generate groups\n",
+    "groups = create_stock_groups(combined_sectors)\n",
+    "\n",
+    "# Print the groups\n",
+    "for i, group in enumerate(groups, 1):\n",
+    "    print(f\"Group {i}: {group}\")\n",
+    "\n",
+    "# Print remaining tickers in each sector\n",
+    "print(\"\\nRemaining Tickers by Sector:\")\n",
+    "for group, tickers in combined_sectors.items():\n",
+    "    print(f\"{group}: {tickers}\")"
    ]
   },
   {
@@ -200,22 +303,21 @@
    },
    "outputs": [],
    "source": [
-    "history_lengths = history_length[1:]\n",
+    "history_lengths = history_length\n",
     "history_length = None\n",
+    "groups = groups[:3]\n",
     "\n",
     "for h_l, history_length in enumerate(history_lengths):\n",
     "    model_save_dir = f'./models/history_length/{history_length}'\n",
-    "    log_dir = f'./logs/history_length/{history_length}'\n",
+    "    log_dir = None #f'./logs/history_length/{history_length}'\n",
     "    # Split the list into groups of 6 stocks without repetition\n",
-    "    n_groups = len(stock_list) // 6  # This should be 3 for 18/6\n",
-    "    groups = [stock_list[i * 6:(i + 1) * 6] for i in range(n_groups)]\n",
     "\n",
     "    # Create environments for each group of stocks\n",
     "    env = None\n",
     "    vec_env = None\n",
     "\n",
     "    # Validation environment\n",
-    "    valid_env, vec_valid_env = create_evaluation_env(history_length, reward_type, '2023-07-01', '2023-12-30', ['TGT', 'MARA', 'GOOGL', 'WMT', 'V', 'PG'])\n",
+    "    valid_env, vec_valid_env = create_evaluation_env(history_length, reward_type, '2023-07-01', '2023-12-30', groups[0])\n",
     "\n",
     "    # Evaluation callback for saving the best model\n",
     "    eval_callback = EvalCallback(\n",
@@ -284,33 +386,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "39fde881-4e37-44a8-8ef4-39a8410ab532",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'env' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43menv\u001b[49m\u001b[38;5;241m.\u001b[39mnum_stocks\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'env' is not defined"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "2131c641-ebc8-4e87-8f7a-3710a4043b8a",
+   "metadata": {},
    "source": [
-    "env.num_stocks"
+    "Group 1: ['NVDA', 'TSLA', 'PFE', 'XOM', 'BAC', 'VZ']\n",
+    "Group 2: ['SMCI', 'F', 'WBA', 'DVN', 'C', 'GOOGL']\n",
+    "Group 3: ['INTC', 'AMZN', 'CVS', 'OXY', 'HBAN', 'T']\n",
+    "Group 4: ['AMD', 'CCL', 'PCG', 'KMI', 'WFC', 'WBD']\n",
+    "Group 5: ['AVGO', 'WMT', 'VTRS', 'SLB', 'KEY', 'CMCSA']\n",
+    "Group 6: ['AAPL', 'MDLZ', 'AES', 'HAL', 'JPM', 'GOOG']\n",
+    "Group 7: ['MU', 'MO', 'BMY', 'FCX', 'MS', 'CSX']\n",
+    "Group 8: ['CSCO', 'SBUX', 'MRK', 'CVX', 'V', 'META']\n",
+    "Group 9: ['MSFT', 'KO', 'JNJ', 'NEM', 'RF', 'BA']\n",
+    "Group 10: ['LRCX', 'NKE', 'NEE', 'CTRA', 'USB', 'PARA']\n",
+    "Group 11: ['MCHP', 'GM', 'ABBV', 'COP', 'SCHW', 'DAL']\n",
+    "Group 12: ['ON', 'AMCR', 'MDT', 'APA', 'TFC', 'LUV']\n",
+    "Group 13: ['QCOM', 'NCLH', 'GILD', 'WMB', 'HST', 'GE']\n",
+    "Group 14: ['AMAT', 'PEP', 'EXC', 'EQT', 'CCI', 'DIS']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9635951c-3733-4c81-a681-ecb86ca2d4d8",
+   "id": "78002b9f-3b2c-4a5f-9dce-450bdda1ea69",
    "metadata": {},
    "outputs": [],
    "source": []
